@@ -1,6 +1,6 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Class-DBI-Loader
-version:      0.02
+version:      0.03
 version_from: lib/Class/DBI/Loader.pm
 installdirs:  site
 requires:
